--- a/README
+++ b/README
@@ -10,7 +10,9 @@ Usage
    ${play.path}/modules/webdrive-<version>.
 2. Add the below line to your dependencies.yml:
 
-      - play -> webdrive 0.1
+      - play -> webdrive <version>
+
+   Run 'play dependencies --sync' after adding this line.
 
 3. Add the below line to your application.conf:
 
@@ -18,6 +20,10 @@ Usage
 
    Of course, you can choose whichever drivers you prefer to have. See
    http://seleniumhq.org/docs/03_webdriver.html for a list of available drivers.
+
+   You can also use shorter names for most of the drivers:
+   
+      webdrive.classes=htmlunit,android,chrome,firefox,ie,iphone
 
 4. Run your tests with:
 
